# alacritty-themer

./: .gitignore  Cargo.toml  Makefile  build.rs
src/: main.rs
src/alacritty/: mod.rs
src/select/: mod.rs
src/themes/: mod.rs
themes/: Afterglow.yml  Argonaut.yml  Ayu Dark.yml  Ayu Mirage.yml  Base16 Default Dark.yml  Blood Moon.yml  Breeze.yml  Campbell.yml  Cobalt 2.yml  Cyberpunk-Neon.yml  Darkside.yml  Darktooth.yml  Dracula.yml  GNOME.yml  Github.yml  Gruvbox.yml  Hybrid.yml  Hyper.yml  IR Black.yml  Iceberg.yml  Jellybeans.yml  Kitty.yml  Material Theme.yml  Molokai.yml  Monokai Pro.yml  Monokai Soda.yml  Monokai.yml  New Moon.yml  Night Owl.yml  Nightfly.yml  Nord.yml  Nova.yml  Ocean Breeze.yml  Oceanic Next.yml  One.yml  Oxide.yml  Panda.yml  Paper Colors.yml  Pear.yml  Pencil.yml  (+19 more)
